Fix responsiveness of the header on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -125,6 +125,7 @@ section {
 .space-between {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 .project {
